Fix overlapping navbar with Credentials heading

--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ h4 {
 
   /* CREDENTIALS */
   .my-cv {
-    padding: 100px 100px 0px;
+    padding: 200px 100px 0px;
   }
   .my-cv a {
     font-size: 28px;
@@ -523,7 +523,7 @@ h4 {
 
   /* CREDENTIALS */
   .my-cv {
-    padding: 100px 100px 0px;
+    padding: 200px 100px 0px;
   }
 
   .my-cv a {
